<resources>
    <string name="app_name">ContactBook - Android Client</string>
    <string name="buttonConnectTitle">Connect</string>
    <string name="defaultApiUrl">https://contactbook.nakov.repl.co/api</string>
    <string name="labelContactBookAPI">ContactBook API:</string>
    <string name="labelEnterKeyword">Enter a keyword for searching in the contacts:</string>
    <string name="buttonSearch">Search</string>
    <string name="labelContactId">Contact ID:</string>
    <string name="labelFirstName">First name:</string>
    <string name="labelLastName">Last name:</string>
    <string name="labelEmail">Email:</string>
    <string name="labelPhone">Phone:</string>
    <string name="labelComments">Comments:</string>
</resources>